(Hopefully) fixed spacing issue

--- a/IS.css
+++ b/IS.css
@@ -114,7 +114,6 @@ a {
     background: url(img/Newsstand-Cydia.png) no-repeat;
     min-height: 169px;
     min-width: 200px;
-    margin-left: 15px;
     float: left;
 }
 
@@ -139,7 +138,6 @@ a {
     background: url(img/Lockscreen-Cydia.PNG) no-repeat;
     min-height: 379px;
     min-width: 200px;
-    margin-right: 15px;
     margin-left: 30px;
     float: right;
 }
@@ -162,7 +160,6 @@ a {
     background: url(img/Music-Cydia.PNG) no-repeat;
     min-height: 369px;
     min-width: 200px;
-    margin-left: 15px;
     margin-right: 30px;
     float: left;
 }
